# minagi-vtf-baker

./: .gitignore  2026-06-24-可行性讨论.md  Guide.txt  LICENSE  LICENSE.ja  LICENSE.zh  README.ja.md  README.md  README.zh.md  build.ps1  启动VTFBaker.lnk  更新.txt
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json  test_distance_colors.vtf
src-tauri/capabilities/: default.json
src-tauri/src/: diagnose.rs  lib.rs  main.rs  mipcheck.rs
src/i18n/: en.js  index.js  ja.js  zh.js
src/scripts/: app.js  default-bg.js
src/styles/: main.css
